# babo

./: README.md  pyproject.toml
src/babo/: cli.py  install.py  logging_setup.py
src/babo/config/: config.json
